# Haskell-Free-Monads-Library

./: free-monads.cabal
Control/IMonad/: Free.hs
Control/Monad/: Free.hs
Control/Monad/Trans/: Free.hs
